--- a/day-2/tars-mq-server/src/main/resources/application.properties
+++ b/day-2/tars-mq-server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # tomcat default 8080
 # server.port=1080
 
+# logback
+# logging.config=classpath:logback.xml
+
 # ibm mq config
 ibm.mq.queueManager=QM1
 ibm.mq.channel=DEV.APP.SVRCONN
