--- a/day-4/tars-mq-server/pom.xml
+++ b/day-4/tars-mq-server/pom.xml
@@ -35,30 +35,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.11</version>
 		</dependency>
 
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>1.2.3</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-access</artifactId>
-			<version>1.2.3</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -83,6 +64,23 @@
 						<tarsFileCharset>UTF-8</tarsFileCharset>
 						<!-- Generate server code -->
 						<servant>true</servant>
+						<!-- Generated source code encoding -->
+						<charset>UTF-8</charset>
+						<!-- Generated source code directory -->
+						<srcPath>${basedir}/src/main/java</srcPath>
+						<!-- Generated source code package prefix -->
+						<packagePrefixName>com.example.tarsmqserver.service.</packagePrefixName>
+					</tars2JavaConfig>
+
+					<tars2JavaConfig>
+						<!-- tars file location -->
+						<tarsFiles>
+							<tarsFile>${basedir}/src/main/resources/rsaserver.tars</tarsFile>
+						</tarsFiles>
+						<!-- Source file encoding -->
+						<tarsFileCharset>UTF-8</tarsFileCharset>
+						<!-- Generate server code -->
+						<servant>false</servant>
 						<!-- Generated source code encoding -->
 						<charset>UTF-8</charset>
 						<!-- Generated source code directory -->
