--- a/day-5/dbserver/src/main/resources/application.properties
+++ b/day-5/dbserver/src/main/resources/application.properties
@@ -1,1 +1,46 @@
 
+# 只有下面三个是必填项（使用内嵌数据库的话这三个也可以不用填，会使用默认配置），其他配置不是必须的
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/db1
+spring.datasource.username=root
+spring.datasource.password=123456
+# driver-class-name 非必填可根据url推断
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Druid 数据源配置，继承spring.datasource.* 配置，相同则覆盖
+spring.datasource.initial-size=2
+spring.datasource.max-active=30
+spring.datasource.min-idle=2
+spring.datasource.max-wait=1234
+spring.datasource.pool-prepared-statements=true
+spring.datasource.max-pool-prepared-statement-per-connection-size=5
+# spring.datasource.max-open-prepared-statements= #等价于上面的max-pool-prepared-statement-per-connection-size
+spring.datasource.validation-query=select 1
+spring.datasource.validation-query-timeout=1
+spring.datasource.test-on-borrow=true
+spring.datasource.test-on-return=true
+spring.datasource.test-while-idle=true
+spring.datasource.time-between-eviction-runs-millis=10000
+spring.datasource.min-evictable-idle-time-millis=30001
+spring.datasource.async-close-connection-enable=true
+
+
+# spring.datasource.aop-patterns=com.alibaba.spring.boot.demo.service.*
+
+# 自定义StatFilter 配置 其他 Filter 不再演示
+spring.datasource.filter.stat.db-type=h2
+spring.datasource.filter.stat.log-slow-sql=true
+spring.datasource.filter.stat.slow-sql-millis=2000
+
+# JPA
+spring.jpa.show-sql= true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# 配置下面参数用于启动监控页面，考虑安全问题，默认是关闭的，按需开启
+spring.datasource.stat-view-servlet.enabled=true
+spring.datasource.filter.stat.enabled=true
+spring.datasource.web-stat-filter.enabled=true
+
+# 更多配置属性见 DruidDataSource 内成员变量（只要有set方法便支持），或者根据IDE提示，或者查看官方文档
+
+nsq.host.nsqlookupd=172.25.0.211:4160
+nsq.host.node=172.25.0.213:4150
